src/styles.css
@import url("https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap");

:root {
  --very-dark-cyan: hsl(183, 100%, 15%);
  --strong-cyan: hsl(172, 67%, 45%);
  --dark-grayish-cyan-1: hsl(186, 14%, 43%);
  --dark-grayish-cyan-2: hsl(184, 14%, 56%);
  --light-grayish-cyan-1: hsl(185, 41%, 84%);
  --light-grayish-cyan-2: hsl(189, 41%, 97%);
  --white: hsl(0, 0%, 100%);
}

::placeholder {
  color: hsl(186, 14%, 43%);
}

html {
  font-size: 24px;
}

body {
  background: var(--light-grayish-cyan-1);
  margin: 0;
}

.main-container {
  margin-top: 1rem;
  background: var(--white);
  border-radius: 20px 20px 0 0;
  padding: 1rem 0.5rem;
  display: flex;
  flex-direction: column;
}

.app {
  font-family: "Space Mono", monospace;
  text-align: center;
  margin-top: 2rem;
}

.control-tip__buttons {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-auto-rows: 1fr;
  gap: 0.5rem;
  margin-top: 0.5rem;
}

.controls {
  margin: 0 0.3rem;
}

.control-bill__label,
.control-people__label,
.control-people__error,
.control-tip__label {
  font-size: 0.6rem;
  font-weight: 700;
  color: var(--dark-grayish-cyan-1);
  margin: 0.8rem 0 0.2rem 0;
  text-align: left;
}

.control-bill__label {
  margin-top: 0;
}

.control-people__container {
  display: flex;
  justify-content: space-between;
}

.result {
  display: grid;
  gap: 0.5rem;
  grid-template-areas:
    "tip-label tip-result"
    "total-label total-result"
    "button-reset button-reset";

  font-size: 0.6rem;
  font-weight: 700;
  color: var(--white);
  background-color: var(--very-dark-cyan);
  padding: 1rem 0.8rem;
  border-radius: 15px;
  margin-top: 1rem;
}

.result__per-person {
  font-size: 0.5rem;
  display: block;
  color: var(--dark-grayish-cyan-2);
}

.result__tip-label-container {
  grid-area: tip-label;
  justify-self: left;
  text-align: left;
}

.result__tip-result-container {
  grid-area: tip-result;
}

.result__total-result-container {
  grid-area: total-result;
}

.result__tip-result-container,
.result__total-result-container {
  font-size: 1.5rem;
  justify-self: right;
  color: var(--strong-cyan);
}

.result__total-label {
  grid-area: total-label;
  justify-self: left;
  text-align: left;
}

.result__button-reset {
  font-family: "Space Mono", monospace;
  font-weight: 700;
  font-size: 0.8rem;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  grid-area: button-reset;
  background-color: var(--strong-cyan);
  padding: 0.2rem 0;
  color: var(--very-dark-cyan);
  height: 2rem;
  align-self: end;
}

.result__button-reset:hover {
  background: var(--light-grayish-cyan-1);
  color: var(--very-dark-cyan);
}

.control-people__error {
  display: var(--errorMessageDisplay);
  color: hsl(12, 91%, 69%);
}

@media screen and (min-width: 800px) {
  .main-container {
    padding: 1rem;
    height: 15rem;
    flex-direction: row;
    max-width: 780px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 10vh;
    border-radius: 15px;
    box-shadow: 8px 8px 25px -20px rgba(0, 0, 0, 0.97);
  }

  .app {
    margin-top: 10vh;
  }

  .control-tip__buttons {
    grid-template-columns: 1fr 1fr 1fr;
  }

  .controls {
    margin: 0;
    margin-right: 3%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    width: 50%;
  }

  .result {
    margin-top: 0;
    padding: 1rem 1.2rem;
    grid-template-rows: 25% 25% auto;
    width: 50%;
  }

  .result__tip-label-container,
  .result__total-label-container {
    margin-top: 0.5rem;
  }
}

